force-app/main/default/objects/Connection__c/fields/Connection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Connection_Frequency__c</fullName>
    <label>Connection Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every 2 Weeks</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Every 3 Months</fullName>
            </value>
            <value>
                <fullName>Every 6 Months</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>